--- a/2024/2024-07-28.md
+++ b/2024/2024-07-28.md
@@ -1,69 +1,71 @@
-# tktktk
-## tktktk
+# New listings underscore why crypto's Wall Street journey is still in its early stages
+## Ether fans celebrated the launch of U.S.-listed funds on the token. But we're still far from true mass adoption of crypto among investors.
 
-![Friendly sign reading: "Come in. We're open."](https://images.unsplash.com/photo-1473187983305-f615310e7daa)
-*Photo by Álvaro Serrano via Unsplash*
+![Ethereum-based computer chip](https://w3w.news/img/michael-fortsch-unsplash-2500.jpg)
+*Photo by Michael Fortsch via Unsplash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-<!-- Lede item. Should run ~450 words. CTA for substack subscriptions, donations. Finish migrations and setup first! -->
+**Everyone in the financial industry** loves a hot [IPO](https://www.investopedia.com/terms/i/ipo.asp).
 
+Bankers make mammoth commissions, reporters usually publish a good scoop or three prior to trading, venture investors cash out with huge profits, and the mom-and-pop types get to feel cool once they can finally get their hands on whatever the latest object of some investment mania happens to be.
 
-<!--
+In crypto world, new stock-market listings play one other role as well: validation. The more that such links beteween traditional finance and digital currencies proliferate, the more legitimate the latter becomes in popular perception and perhaps less associated with debacles like [FTX](https://en.wikipedia.org/wiki/FTX).
 
-Lede item. Should run ~450 words. Some possibilities...
+The Ethereum community celebrated its version of an IPO last week after the Securities and Exchange Commission gave its [final approval](https://www.coindesk.com/business/2024/07/22/sec-approves-spot-ethereum-etfs/) for exchange-traded funds (ETFs) holding ether tokens on investors' behalf. The new funds began public trading Tuesday, attracting heavy investor interest on traditional Wall Street venues like the New York Stock Exchange.
 
-- ELECTION24: No way around it, crypto leans heavily toward Trump in the U.S. presidential election. It didn't have to be this way for Democrats.
+First-day trading volume [topped $1 billion](https://www.coindesk.com/markets/2024/07/23/ether-etf-volumes-top-1b-on-day-one/), driven by $107 million of net inflow of investor cash into the new funds.
 
-- tk
-- tk
+Ether's [token price](https://coinmarketcap.com/currencies/ethereum/) fell 5% for the week, but that hardly dampened the mood. ETH fans were glad to have cleared a milestone akin to the launch of bitcoin ETFs in January -- a development that has clearly helped boost that token over the longer haul.
 
--->
+It's also worth noting that last weak was a tepid one on Wall Street in general, including the Nasdaq Composite Index's [worst daily loss](https://qz.com/nasdaq-dow-jones-stocks-google-tesla-earnings-1851603331) of 2024 on Wednesday, spurred by weaker than expected earnings from Tesla and Alphabet. The S&P 500 also fell on the week, but the Dow Jones Industrial Average managed a [small gain](https://www.cnn.com/2024/07/26/investing/stocks-rate-cuts-inflation-fed/index.html) on hopes that the Federal Resrve will cut interest rates soon.
+
+Perhaps a more sobering sign for crypto fans should be a certain less-heralded IPO last week: The cold storage company Lineage [went public](https://www.msn.com/en-us/money/companies/why-a-cold-storage-company-just-delivered-the-year-s-hottest-ipo/ar-BB1qHQLs) on Nasdaq, fetching an $18 billion total valuation. That made it the largest corporate IPO in the U.S. so far this year.
+
+One catch, though: Lineage doesn't do the sort of cold storage that cryptoheads [advocate](https://www.investopedia.com/articles/investing/030515/what-cold-storage-bitcoin.asp), meaning offline storage of tokens for heightened security against hackers.
+
+No, Lineage does the *old-school* version of cold storage involving bags of peas, racks of ribs, and lobsters. It's one of the largest providers of such logistics in the U.S., with corporate clients like Kraft Heinz, Darden Restaurants, and Walmart, according to the [Wall Street Journal](https://www.msn.com/en-us/money/companies/why-a-cold-storage-company-just-delivered-the-year-s-hottest-ipo/ar-BB1qHQLs).
+
+That really puts things in a certain perspective, I think. For all the strides crypto has made on Wall Street this year, it's still quantifiably a pretty small, specialized niche as far as the general public is concerned.
+
+To most [normies](https://www.urbandictionary.com/define.php?term=Normie), the tokenized economy is still overshadowed by companies that do mundane things like operate scads of refrigerators in warehouses.
 
 ### Week in Review: July 21-27, 2024
+- **Bitcoiners hailed** a [keynote speech](https://www.youtube.com/watch?v=M6jxBv0W5tc) by former President Donald Trump at a major industry gathering in Nashville. If he wins a second term, Trump said he'll push for less aggressive regulation and formation of a national strategic reserve of bitcoin.  
+- **Other politicians angled for voter support** at the Nashville gathering as well. Independent presidential candidate Robert F. Kennedy Jr. delivered a [keynote speech](https://www.youtube.com/watch?v=LPK5bTeyJlQ) of his own. Republican senators [Cynthia Lummis](https://www.coindesk.com/policy/2024/07/27/us-senator-lummis-proposes-the-us-buy-1m-bitcoin-to-reduce-national-debt/) and [Tim Scott](https://www.coindesk.com/policy/2024/07/26/key-us-senate-republican-tim-scott-makes-crypto-fan-debut/), ranking GOP member on the Senate Banking Committee, also spoke in favor of digital assets. Meanwhile, Democrats' new presumptive nominee for president, Kamala Harris, was a notable no-show. But Democratic congressman Mark Nichol [said](https://www.coindesk.com/policy/2024/07/27/democrats-pushing-harris-campaign-for-reset-on-crypto-stance-house-rep-says/) Harris understands bitcoin and may heed some Democratic House members' call for a "reset" of policy toward the industry after the last few years' crackdown by the Biden administration.
+- **Bitstamp began repaying** investors affected by the notorious Mt. Gox hack after receiving all the funds owed to them from the bankrupt exchange's trustee. ([Cointelegraph](https://cointelegraph.com/news/bitstamp-mt-gox-creditor-repayments))
+- **AI updates:** The Wall Street Journal reports that OpenAI is [working on a search engine](https://www.wsj.com/tech/ai/openai-search-engine-searchgpt-97771f86?st=0wmicwvf6qzjvxc&reflink=desktopwebshare_permalink) dubbed SearchGPT. The Chinese-owned chatbot app Talkie, which generates conversations with celebrities or fictional romantic partners, has quietly become one of the [most popular](https://www.wsj.com/tech/ai/one-of-americas-hottest-entertainment-apps-is-chinese-owned-04257355?st=fvaugx6zgkiln29&reflink=desktopwebshare_permalink) entertainment apps in the U.S. And The MIT Technology Review published a [short history of AI](https://www.technologyreview.com/2024/07/16/1095001/a-short-history-of-ai-and-what-it-is-and-isnt/). Handy!
+- **Good news (for the rest of us) about Alphabet:** Negotiations for Google's parent to acquire cybersecurity startup Wiz for $23 billion have broken down. The deal would have been the richest acquisition of a tech startup ever. Intead, Wiz will stay independent and pursue an initial public offering of stock. How quaint. ([Wall Street Journal](https://www.wsj.com/tech/google-talks-to-acquire-cybersecurity-startup-wiz-fall-apart-64194e9e?st=e6b7agiaf5enu81&reflink=desktopwebshare_permalink))
+- **Bad news (for the rest of us) about Alphabet:** Google decided to keep the Chrome web browser laden as ever with third-party cookies, ending efforts to find a more pro-privacy solution. Several years of talks with advertisers, regulators, and other stakeholders had reached an impasse, it seems. ([Wall Street Journal](https://www.wsj.com/tech/google-is-keeping-cookies-in-chrome-after-all-89debea8?st=lmflf7z60ynpgxm&reflink=desktopwebshare_permalink))
+- **For any concerned Chrome users** seeking an alternative browser at this point, I highly recommend [Brave](https://brave.com/). It has the same user interface as Chrome but was built from scratch to block all sorts of cookies and tracking scripts. Brave also has a built-in crypto wallet and [native token](https://basicattentiontoken.org/), if you want to use those. But that's optional. *Full anti-disclosure: I have no paid relationship with Brave. I've just used it as my daily workhorse browser for several years and truly* ❤️ *it.*  
 
-<!-- Some candidates left over from last week. May have shelf life... -->
-
-- https://techcrunch.com/2024/07/18/usps-shared-customer-postal-addresses-with-meta-linkedin-and-snap/
-
-- https://www.coindesk.com/markets/2024/07/17/grayscale-launches-artificial-intelligence-focused-crypto-fund-ai-tokens-gain/
-
-- https://www.cnbc.com/2024/07/18/bye-bye-bitcoin-hello-ai-texas-miners-leave-crypto-for-next-new-wave.html
-
-- Will TSMC join the trillion-dollar club?
-
-- https://www.coindesk.com/policy/2024/07/18/blockfi-to-start-interim-crypto-distributions-through-coinbase-this-month/
-
-- https://www.coindesk.com/business/2024/07/18/crypto-exchange-wazirx-sees-230m-in-suspicious-withdrawals-largely-100m-in-shib-token/
-
-- https://www.coindesk.com/opinion/2024/07/18/crypto-for-advisors-web2-to-web3/
-
-- https://www.cbsnews.com/texas/news/north-texas-community-says-crypto-mining-facility-never-ending-noise-declining-health/
-
-- https://www.politico.eu/article/russia-vladimir-putin-crypto-russia-sanctions-west-banking-services-nuclear-power-plant-usa-mining/
-
-- https://www.technologyreview.com/2024/07/17/1095019/google-amazon-and-the-problem-with-big-techs-climate-claims/
-
-- https://www.technologyreview.com/2024/07/16/1095001/a-short-history-of-ai-and-what-it-is-and-isnt/
-
-- Solana and ether ETF updates. Links tk
-
-- https://decrypt.co/239003/aussies-still-prefer-bitcoin-but-not-by-much-kraken
-
-- https://thenewstack.io/python-developers-hold-the-key-to-blockchain-adoption/
-
-- https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
-
-- https://decrypt.co/239633/generative-ai-writing-creative-diverse-study
-
-- **Markets check:** <!-- 7-day changes in BTC, ETH, Market Cap. S&P. Gold. USDX. -->
 
 ### Odds & Ends
 
-<!-- A bunch of evergreen candidates from Slate... -->
+- **A brief personal update:** I've begun gathering past material from this newsletter into an anthology manuscript. If you're in the New York City area, I'll be doing an early reading from the manuscript as part of a free event for the tech magazine BE next Saturday, Aug. 3. We'll start at 2 p.m. at Rokmil, located at 274 Lenox Ave., between 123rd and 124th Streets.
+- **If you're not in the New York City area,** please stay tuned. 😊
+- **Slate's advice columns are insane.** They have a [whole section](https://slate.com/advice) of them now, apparently. Who knew? Recent sample headline: ["My Brother’s Talking Parrot Has Transformed My Kids Into Absolute Deviants"](https://slate.com/advice/2024/07/brother-talking-parrot-kids-parenting-advice.html)
 
-- **Slate's advice columns are insane.** https://slate.com/advice/2024/07/brother-talking-parrot-kids-parenting-advice.html
-- https://slate.com/life/2024/07/flying-is-better-with-an-open-window-shade.html
-- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
+_**That's it for now. Thanks for reading the newsletter today!**_
 
-<!-- Pickup boilerplate from last week... -->
+<!--
+
+Continue iterating boilerplate:
+
+- Add CTA for subscriptions/donations for next week.
+-> Add editorial policy to website, link in boilerplate.
+- Integrate recent LaGuardia bio...
+
+Peter A. McKay is a storyteller, thought leader, and marketer focused on blockchain tech. He publishes #w3w, a newsletter about decentralization.
+
+During the COVID pandemic, Peter served as Head of Content for the censorship-resistant platform Blogchain. He has also done marketing and content work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News.
+
+From 1999 to 2010, Peter was an award-winning markets reporter at the Wall Street Journal.
+
+_**About me: I'm a seasoned content creator and manager focused on decentralization. I've published this newsletter for over seven years and was previously an award-winning markets reporter at the Wall Street Journal. For a fuller bio, check out my [personal website](https://pmckay.com/).**_  
+
+-->
+
+_**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w.media.**_
+
+_**Best wishes for a healthy and productive week ahead.**_ 😊
