--- a/2024/2024-07-28.md
+++ b/2024/2024-07-28.md
@@ -1,4 +1,4 @@
-# New listings underscore why crypto's Wall Street journey is still in its early stages
+# New listings underscore why web3's Wall Street journey is still in its early stages
 ## Ether fans celebrated the launch of U.S.-listed funds on the token. But we're still far from true mass adoption of crypto among investors.
 
 ![Ethereum-based computer chip](https://w3w.news/img/michael-fortsch-unsplash-2500.jpg)
@@ -6,7 +6,7 @@
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-**Everyone in the financial industry** loves a hot [IPO](https://www.investopedia.com/terms/i/ipo.asp).
+**Everyone on Wall Street** loves a hot [IPO](https://www.investopedia.com/terms/i/ipo.asp).
 
 Bankers make mammoth commissions, reporters usually publish a good scoop or three prior to trading, venture investors cash out with huge profits, and the mom-and-pop types get to feel cool once they can finally get their hands on whatever the latest object of some investment mania happens to be.
 
@@ -18,7 +18,7 @@ First-day trading volume [topped $1 billion](https://www.coindesk.com/markets/20
 
 Ether's [token price](https://coinmarketcap.com/currencies/ethereum/) fell 5% for the week, but that hardly dampened the mood. ETH fans were glad to have cleared a milestone akin to the launch of bitcoin ETFs in January -- a development that has clearly helped boost that token over the longer haul.
 
-It's also worth noting that last weak was a tepid one on Wall Street in general, including the Nasdaq Composite Index's [worst daily loss](https://qz.com/nasdaq-dow-jones-stocks-google-tesla-earnings-1851603331) of 2024 on Wednesday, spurred by weaker than expected earnings from Tesla and Alphabet. The S&P 500 also fell on the week, but the Dow Jones Industrial Average managed a [small gain](https://www.cnn.com/2024/07/26/investing/stocks-rate-cuts-inflation-fed/index.html) on hopes that the Federal Resrve will cut interest rates soon.
+It's also worth noting that last week was a tepid one on Wall Street in general, including the Nasdaq Composite Index's [worst daily loss](https://qz.com/nasdaq-dow-jones-stocks-google-tesla-earnings-1851603331) of 2024 on Wednesday, spurred by weaker than expected earnings from Tesla and Alphabet. The S&P 500 also fell on the week, but the Dow Jones Industrial Average managed a [small gain](https://www.cnn.com/2024/07/26/investing/stocks-rate-cuts-inflation-fed/index.html) on hopes that the Federal Resrve will cut interest rates soon.
 
 Perhaps a more sobering sign for crypto fans should be a certain less-heralded IPO last week: The cold storage company Lineage [went public](https://www.msn.com/en-us/money/companies/why-a-cold-storage-company-just-delivered-the-year-s-hottest-ipo/ar-BB1qHQLs) on Nasdaq, fetching an $18 billion total valuation. That made it the largest corporate IPO in the U.S. so far this year.
 
