updating aug '24 drafts

--- a/2024/2024-08-04.md
+++ b/2024/2024-08-04.md
@@ -1,42 +1,55 @@
-# tktktk
-## tktktk
+# Brooks: Think twice about comparing AI to human brains
+## There's still much we don't know about the latter. That's perhaps easy to forget in the rush to be "smart" in speculating about new technology.
 
-![Friendly sign reading: "Come in. We're open."](https://images.unsplash.com/photo-1473187983305-f615310e7daa)
-*Photo by Álvaro Serrano via Unsplash*
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/The_Thinker_%2824284172271%29.jpg/2560px-The_Thinker_%2824284172271%29.jpg)
+*Auguste Rodin's sculpture The Thinker. Photo by Erik Drost via Wikimedia Commons*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-<!-- Lede item. Should run ~450 words. -->
+https://www.nytimes.com/interactive/2024/07/31/opinion/ai-fears.html?123
+
+**"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
 
 ### Week in Review: July 28 to Aug. 3, 2024
 
-- tk
-- tk
+- Market slump: https://www.coindesk.com/markets/2024/08/04/bitcoin-plunges-under-60k-crypto-bulls-lose-200m-as-dogecoin-solana-tokens-drop-10/ | https://www.coindesk.com/business/2024/08/02/morgan-stanley-to-offer-bitcoin-etfs-to-wealthy-clients-cnbc/
 
-<!--
+- https://www.coindesk.com/business/2024/07/30/circle-said-to-be-trading-around-5b-valuation-ahead-of-planned-ipo-sources/
 
-Some leftovers from last week...
+- CA DMV: https://qz.com/california-dmv-blockchain-car-title-fraud-ava-labs-web3-1851609271 | https://www.reuters.com/technology/california-dmv-puts-42-million-car-titles-blockchain-fight-fraud-2024-07-30/
 
-- **U.S. politics updates:** https://www.msn.com/en-us/news/politics/vice-president-kamala-harris-team-contacted-mark-cuban-on-crypto-policy/ar-BB1qvfgY | Trump (and perhaps Harris?) speaking at bitcoin conference in Nashville Saturday. Links TK | https://www.msn.com/en-us/news/politics/elon-musk-backs-down-from-45-million-a-month-pledge-to-trump-says-he-doesn-t-subscribe-to-cult-of-personality/ar-BB1qvnvL | https://www.wsj.com/politics/elections/how-elon-musk-broke-with-biden-and-the-democrats-4960b7d8?st=2v7uljnr9nzlasw&reflink=desktopwebshare_permalink
+- https://www.theblock.co/post/308984/coinbases-base-blockchain-is-getting-a-custom-onchain-identity-tool
 
+- Draft Kings is getting out of NFTs. https://www.coindesk.com/business/2024/07/30/draftkings-dumps-nft-business-citing-legal-developments/
 
-- https://www.cbsnews.com/texas/news/north-texas-community-says-crypto-mining-facility-never-ending-noise-declining-health/
+- https://cryptoslate.com/fantom-rebrands-into-sonic-labs-unveiling-high-speed-blockchain/
 
-- AI updates:   | TSMC has been hanging around the trillion-dollar club. https://www.msn.com/en-us/money/markets/asia-s-biggest-chipmaker-is-set-to-join-the-trillion-dollar-club-tsmc-will-topple-meta-soon-as-it-benefits-from-ai-boom/ar-BB1qk5SZ | AI investing mania may be cooling https://seekingalpha.com/article/4705419-tsmc-stock-solid-q2-earnings-ai-investing-sentiment-cools | https://finance.yahoo.com/news/meet-artificial-intelligence-ai-stock-095300221.html | https://www.foxbusiness.com/technology/ftc-probes-ai-powered-surveillance-pricing-mastercard-jpmorgan-chase-mckinsey-others | https://www.topgear.com/car-news/tech/nine-ways-artificial-intelligence-making-its-way-cars |
+- https://cointelegraph.com/news/crypto-com-cryptocurrency-exchange-australian-prosecutors-jail-user-mistake-funds
 
- | https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
+- https://www.salon.com/2024/08/03/doj-lawsuit-tiktok-illegally-collected-personal-data-from-children/?in_brief=true
 
+- More mishaps at Meta: Cocaine ads: https://www.wsj.com/tech/meta-cocaine-opioids-ads-dea8e0fc?st=ig3nqpb6pslvtiz&reflink=desktopwebshare_permalink | Texas court decision. Link tk.
 
+<!-- Optional adds...
 
-<!-- https://thenewstack.io/python-developers-hold-the-key-to-blockchain-adoption/ -->
+- https://www.coindesk.com/policy/2024/07/30/sec-intends-to-amend-complaint-against-third-party-tokens-like-sol-in-binance-case/
 
+- SV folks for Kamala: https://www.nytimes.com/2024/07/31/technology/silicon-valley-investors-support-kamala-harris.html
+
+-->
 
 ### Odds & Ends
 
-<!-- Couple of evergreen candidates from Slate... -->
+- https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
 
 - https://slate.com/life/2024/07/flying-is-better-with-an-open-window-shade.html
 
-- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
+ _**That's it for now. Thanks for reading the newsletter today!**_
 
-<!-- Pickup boilerplate from last week... -->
+ _**About me: I'm a New York-based writer and marketer with more than seven years' experience creating content about web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning at the time about blockchain technology and decentralization with other people interested in such stuff.**_
+
+  _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done marketing and content work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
+
+  _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w.media.**_
+
+  _**Best wishes for a healthy and productive week ahead.**_ 😊
