updating aug '24 drafts

--- a/2024/2024-08-04.md
+++ b/2024/2024-08-04.md
@@ -1,48 +1,54 @@
 # Brooks: Think twice about comparing AI to human brains
 ## There's still much we don't know about the latter. That's perhaps easy to forget in the rush to be "smart" in speculating about new technology.
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/The_Thinker_%2824284172271%29.jpg/2560px-The_Thinker_%2824284172271%29.jpg)
+![Auguste Rodin's sculpture The Thinker](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/The_Thinker_%2824284172271%29.jpg/2560px-The_Thinker_%2824284172271%29.jpg)
 *Auguste Rodin's sculpture The Thinker. Photo by Erik Drost via Wikimedia Commons*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-https://www.nytimes.com/interactive/2024/07/31/opinion/ai-fears.html?123
+**New York Times columnist David Brooks** just published what strikes me as a real [common-sense outlook](https://www.nytimes.com/interactive/2024/07/31/opinion/ai-fears.html?123) regarding artificial intelligence. Those tend to be in short supply in the press these days, so I want to highlight it here.
 
-**"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
+Brooks says he's optimistic about AI's potential to be a useful tool for people. By contrast, he disregards some of the more apocalyptic predictions about it *replacing* people at various tasks as hype that's (1) generally overblown and (2) specifically prone to underestimating *human* brains.
+
+He writes:
+
+<blockquote><em>The brain is its own universe. Sometimes I hear tech people saying they are building machines that think like people. Then I report this ambition to neuroscientists and their response is: That would be a neat trick, because we don’t know how people think.</em></blockquote>
+
+Another gem further on:
+
+<blockquote><em>Like everybody else, I don’t know where this is heading. When air-conditioning was invented, I would not have predicted: “Oh wow. This is going to create modern Phoenix.” But I do believe lots of people are getting overly sloppy in attributing all sorts of human characteristics to the bots. And I do agree with the view that A.I. is an ally and not a rival — a different kind of intelligence, more powerful than us in some ways, but narrower.</em></blockquote>
+
+Brooks's column reminded me of a [glorious rant](https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html) Slate published earlier this summer by writer Rachel Connolly, who has a degree in physics and math.
+
+Connolly doesn't mention AI at all in her piece, but she is definitely interested in how people tend to overreach into what are ultimately unscientific conclusions about the human brain.
+
+Her particular pet peeve is "labelers," people who make overly strict generalizations about "math brains" versus "creative brains," ostensibly based on the research into differences between the left hemisphere of the brain and the right.
+
+When Connolly frequently encounters a labeler who's mystified as to how she's able to write for a living after studying topics at university that clearly required a "math brain," she has a great retort:
+
+"I don't think that's how brains work."
 
 ### Week in Review: July 28 to Aug. 3, 2024
 
-- Market slump: https://www.coindesk.com/markets/2024/08/04/bitcoin-plunges-under-60k-crypto-bulls-lose-200m-as-dogecoin-solana-tokens-drop-10/ | https://www.coindesk.com/business/2024/08/02/morgan-stanley-to-offer-bitcoin-etfs-to-wealthy-clients-cnbc/
+- **Crypto and other risky assets sank,** hurt in part by a weak U.S. employment report that prompted Wall Street traders to seek out safe-haven investments instead. Bitcoin suffered a 7-day decline of [nearly 13%](https://coinmarketcap.com/currencies/bitcoin/) and hit a [three-week low](https://www.coindesk.com/markets/2024/08/04/bitcoin-plunges-under-60k-crypto-bulls-lose-200m-as-dogecoin-solana-tokens-drop-10/) south of $60,000. One bright spot amid the bloodletting, however:  [Morgan Stanley said](https://www.coindesk.com/business/2024/08/02/morgan-stanley-to-offer-bitcoin-etfs-to-wealthy-clients-cnbc/) it will offer exchange-traded bitcoin funds to clients with net worths of at least $1.5 million.
 
-- https://www.coindesk.com/business/2024/07/30/circle-said-to-be-trading-around-5b-valuation-ahead-of-planned-ipo-sources/
+- **Stablecoin issuer Circle** is currently valued around $5 billion among private tech investors, down from $9 billion in 2022. It filed a proposal with U.S. regulators in January to do an initial public offering on Wall Street. However, the pricing and exact timing of a listing are still to be determined. ([CoinDesk](https://www.coindesk.com/business/2024/07/30/circle-said-to-be-trading-around-5b-valuation-ahead-of-planned-ipo-sources/))  
 
-- CA DMV: https://qz.com/california-dmv-blockchain-car-title-fraud-ava-labs-web3-1851609271 | https://www.reuters.com/technology/california-dmv-puts-42-million-car-titles-blockchain-fight-fraud-2024-07-30/
+- **California's Department of Motor Vehicles** will use the Avalanche blockchain to store car titles and prevent fraud. ([Quartz](https://qz.com/california-dmv-blockchain-car-title-fraud-ava-labs-web3-1851609271))
 
-- https://www.theblock.co/post/308984/coinbases-base-blockchain-is-getting-a-custom-onchain-identity-tool
+- **The team behind the Base blockchain** unveiled a new identity system called Basenames that will be used to connect wallets and applications. ([The Block](https://www.theblock.co/post/308984/coinbases-base-blockchain-is-getting-a-custom-onchain-identity-tool))
 
-- Draft Kings is getting out of NFTs. https://www.coindesk.com/business/2024/07/30/draftkings-dumps-nft-business-citing-legal-developments/
+- **The gambling platform DraftKings** shut down its marketplace for non-fungible tokens due to regulatory uncertainty. ([CoinDesk](https://www.coindesk.com/business/2024/07/30/draftkings-dumps-nft-business-citing-legal-developments/))
 
-- https://cryptoslate.com/fantom-rebrands-into-sonic-labs-unveiling-high-speed-blockchain/
+- **The Fantom Foundation rebranded itself Sonic Labs**, reflecting its new mission to support the Sonic blockchain protocol. ([CryptoSlate](https://cryptoslate.com/fantom-rebrands-into-sonic-labs-unveiling-high-speed-blockchain/))
 
-- https://cointelegraph.com/news/crypto-com-cryptocurrency-exchange-australian-prosecutors-jail-user-mistake-funds
-
-- https://www.salon.com/2024/08/03/doj-lawsuit-tiktok-illegally-collected-personal-data-from-children/?in_brief=true
-
-- More mishaps at Meta: Cocaine ads: https://www.wsj.com/tech/meta-cocaine-opioids-ads-dea8e0fc?st=ig3nqpb6pslvtiz&reflink=desktopwebshare_permalink | Texas court decision. Link tk.
-
-<!-- Optional adds...
-
-- https://www.coindesk.com/policy/2024/07/30/sec-intends-to-amend-complaint-against-third-party-tokens-like-sol-in-binance-case/
-
-- SV folks for Kamala: https://www.nytimes.com/2024/07/31/technology/silicon-valley-investors-support-kamala-harris.html
-
--->
+- **Australian prosecutors are calling** for a prison sentence for a Crypto.com user who accidentally received nearly $7 million from the exchange and spent most of it before an internal error was discovered. ([Cointelegraph](https://cointelegraph.com/news/crypto-com-cryptocurrency-exchange-australian-prosecutors-jail-user-mistake-funds))
 
 ### Odds & Ends
 
-- https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
+- **ICYMI:** Cloudflare recently unveiled new (and free) tools for creators to [block their web content](https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click) from being scraped by AI bots looking for training data.  
 
-- https://slate.com/life/2024/07/flying-is-better-with-an-open-window-shade.html
+- **Slate's Henry Grabar** argues cogently for [looking out the airplane window](https://slate.com/life/2024/07/flying-is-better-with-an-open-window-shade.html) rather than at your devices when you fly.
 
  _**That's it for now. Thanks for reading the newsletter today!**_
 
