--- a/2024/2024-08-11.md
+++ b/2024/2024-08-11.md
@@ -10,6 +10,18 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 ### Week in Review: Aug. 4-10, 2024
 
+<!-- Leftovers from last week...
+
+- https://www.salon.com/2024/08/03/doj-lawsuit-tiktok-illegally-collected-personal-data-from-children/?in_brief=true
+
+- More mishaps at Meta: Cocaine ads: https://www.wsj.com/tech/meta-cocaine-opioids-ads-dea8e0fc?st=ig3nqpb6pslvtiz&reflink=desktopwebshare_permalink | Texas court decision. Link tk.
+
+- https://www.coindesk.com/policy/2024/07/30/sec-intends-to-amend-complaint-against-third-party-tokens-like-sol-in-binance-case/
+
+- SV folks for Kamala: https://www.nytimes.com/2024/07/31/technology/silicon-valley-investors-support-kamala-harris.html
+
+-->
+
 - tk
 - tk
 
